# neural-network

./: .flake8  .gitignore  Makefile  pyproject.toml
docs/: tasks.md
net/activations/: _base.py  relu.py  sigmoid.py  softmax.py  tanh.py
net/layers/: __init__.py  _base.py  conv2d.py  dense.py  dropout.py  flatten.py  pooling.py
net/losses/: __init__.py  _base.py  cross_entropy.py  mse.py
net/losses/classification/: binary_cross_entropy.py  cross_entropy.py
net/models/: _base.py  sequential.py
net/models/core/: sequential.py
net/optimizers/: _base.py  adam.py  momentum.py  sgd.py
net/utils/: metrics.py
notebooks/: house_price_prediction.ipynb  mnist.ipynb  mnist_visualization.ipynb  profiler_debug.ipynb  xor_test.ipynb
tests/: conftest.py  test_activations.py  test_layers.py  test_losses.py  test_optimizers.py  test_utils.py
