[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[project]
name = "neuralnetwork"
version = "0.1.0"
description = ""
authors = [
    {name = "Kaan",email = "kaanrkaraman@proton.me"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy (>=2.2.5,<3.0.0)"
]

[tool.poetry.group.dev.dependencies]
jupyterlab = "^4.4.2"
pytest = "^8.3.5"
matplotlib = "^3.10.3"
ruff = "^0.11.9"

