[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[project]
name = "neuralnetwork"
version = "0.1.0"
description = ""
authors = [
    {name = "Kaan",email = "kaanrkaraman@proton.me"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy (>=2.2.5,<3.0.0)"
]

[tool.poetry.group.dev.dependencies]
jupyterlab = "^4.4.2"
pytest = "^8.3.5"
matplotlib = "^3.10.3"
black = "^25.1.0"
isort = "^6.0.1"
flake8 = "^7.2.0"
scikit-learn = "^1.6.1"

[tool.black]
line-length = 88
target-version = ["py39"]
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
  | build
  | dist
  | __pycache__
  | notebooks
)/
'''

[tool.isort]
profile = "black"
line_length = 88
known_first_party = ["net"]
known_third_party = ["numpy"]
skip = ["__init__.py"]
src_paths = ["net", "tests"]